<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="assessment" type="com.schoolfam.parcher.data.assessment.Assessment"/>
        <variable name="student" type="com.schoolfam.parcher.data.student.Student"/>
        <variable name="subject" type="com.schoolfam.parcher.data.subject.Subject"/>
        <variable name="assessmentType" type="com.schoolfam.parcher.data.assessmentType.AssessmentType"/>
        <variable name="section" type="com.schoolfam.parcher.data.section.Section"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Fragments.TeacherFragments.TeacherPostAssessmentFragment">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="Post Assessment"
                  android:fontFamily="@font/masque"
                  android:gravity="center"
                  android:textColor="@color/colorPrimary"
                  android:textSize="25sp"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"
                  tools:layout_editor_absoluteX="0dp" android:id="@+id/textView2"/>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:id="@+id/card_view"
                android:layout_gravity="center"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
        >


            <LinearLayout android:layout_width="match_parent"
                          android:orientation="vertical"
                          android:layout_height="wrap_content"
                          android:paddingRight="40dp"
                          android:paddingLeft="40dp"
                          android:layout_marginTop="8dp">
                <TextView
                        android:id="@+id/assessment_student_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@{student.userId}"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-smallcaps"/>

                <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{subject.subjectName}"
                        android:fontFamily="@font/masque"
                />
                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                    <Spinner
                            android:id="@+id/subject_spinner"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="60dp"

                    />
                    <Button
                            android:id="@+id/select_subject_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="select"
                            android:textColor="#fff"
                            android:background="@drawable/round_button"

                    />
                </LinearLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{assessmentType.assessment_name}"
                        android:fontFamily="@font/masque"
                />
                <Spinner
                        android:id="@+id/assessment_type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"

                />
                <EditText
                        android:id="@+id/assessment_score_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="SCORE"
                        android:text="@{assessment.score}"
                        android:textSize="15dp"
                        android:fontFamily="@font/spiderman_homecoming"

                />

                <Button
                        android:id="@+id/post_assessment_button"
                        android:layout_width="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="50dp"
                        android:text="Post"
                        android:textColor="#fff"
                        android:background="@drawable/round_button"
                />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>